--- a/css/style.css
+++ b/css/style.css
@@ -26,25 +26,25 @@ body {
 	width:1000px;
 }
 
-ul#topMenu {
+#topMenu {
 	margin:0;
 	padding:0;
 	text-align:right;
 	list-style-type:none
 }
 
-ul#topMenu li {
+#topMenu li {
 	display:inline-block;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:13px;
 	color:#666
 }
 
-ul#topMenu li:last-child {
+#topMenu li:last-child {
 	padding-right:0;
 }
 
-ul#topMenu li a, #topMenu li a:link {
+#topMenu li a, #topMenu li a:link {
 	display:inline-block;
 	margin:0;
 	padding:11px 9px 11px 20px;
