--- a/css/lp.css
+++ b/css/lp.css
@@ -1,7 +1,40 @@
-#topMenu {
+@font-face {
+font-family: 'GothamBook';
+src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.eot');
+src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.eot?iefix') format('eot'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.woff') format('woff'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.ttf') format('truetype'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.svg#gotham-book-webfont') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+@font-face {
+font-family: 'GothamMedium';
+src: url('gotham-bold-webfont.eot');
+src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.eot?iefix') format('eot'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.woff') format('woff'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.ttf') format('truetype'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.svg#gotham-medium-webfont') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+@font-face {
+font-family: 'GothamBold';
+src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.eot');
+src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.eot?iefix') format('eot'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.woff') format('woff'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.ttf') format('truetype'),
+     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.svg#gotham-bold-webfont') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+
+
+
+nav {
 	margin:0;
 	padding:0;
-	position:fxed;
+	position:fixed;
 	top:0;
 	left:0;
 	width:100%;
@@ -24,18 +57,18 @@
 	list-style-type:none
 }
 
-#topMenu li {
+nav li {
 	display:inline-block;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:13px;
 	color:#666
 }
 
-#topMenu li:last-child {
+nav li:last-child {
 	padding-right:0;
 }
 
-#topMenu li a, #topMenu li a:link {
+nav li a, nav li a:link {
 	display:inline-block;
 	margin:0;
 	padding:11px 9px 11px 20px;
@@ -45,7 +78,7 @@
 	background:transparent url(../img/top-nav-arrow.gif) 3px 13px no-repeat
 }
 
-#topMenu li a:hover {
+nav li a:hover {
 	text-decoration:underline
 }
 
@@ -70,7 +103,7 @@
 #nav a:link, #nav a:visited {
 	display:block;
 	padding:12px 0 11px 10px;
-	font:"Gotham Bold";
+	font-family: GothamBold, Helvetica, Arial, sans-serif;
 	font-size:12px;
 	font-weight:bold;
 	color:#999;
@@ -107,7 +140,7 @@
 	margin-top:42px;
 	padding-left:0;
 	color:#fff;
-	font:"Gotham Bold";
+	font-family: GothamBold, Helvetica, Arial, sans-serif;
 	font-size:14px;
 	font-weight:bold;
 	text-align:center;
@@ -138,9 +171,12 @@
 .heading {
 	margin-bottom:20px
 }
+.heading h1 {
+	color: #000;
+}
 
 .page h1 {
-	font:"Gotham Medium";
+	font-family: GothamMedium, Helvetica, Arial, sans-serif;
 	font-size:48px;
 	font-weight:500;
 	text-transform:uppercase;
@@ -148,7 +184,7 @@
 }
 
 .page h2 {
-	font:"Gotham Bold";
+	font-family: GothamBold, Helvetica, Arial, sans-serif;
 	font-size:22px
 }
 
@@ -251,7 +287,7 @@
 
 #third h3 {
 	margin-bottom:20px;
-	font:"Gotham Medium";
+	font-family: GothamMedium, Helvetica, Arial, sans-serif;
 	font-size:15px
 }
 
