--- a/css/lp.css
+++ b/css/lp.css
@@ -159,6 +159,17 @@ nav.floating .cta a:hover {
 	text-shadow:0 4px 4px rgba(0,0,0,.66);
 }
 
+nav.floating .logo {
+	margin-left: 16px;
+}
+nav.floating .logo a {
+	margin: 50px 0 0 0;
+	display: block;
+	width: 151px;
+	height: 61px;
+	background: transparent url(../img/sprite.png) no-repeat 0 -60px;
+}
+
 .page {
 	background: transparent 50% 0 no-repeat fixed;
 	background-size: 100% auto;
