--- a/css/lp.css
+++ b/css/lp.css
@@ -29,6 +29,10 @@ font-weight: normal;
 font-style: normal;
 }
 
+body {
+	background: #333;
+}
+
 a, a:visited {
 	color: #09f;
 	text-decoration: none;
@@ -171,12 +175,14 @@ nav.floating .logo a {
 }
 
 .page {
-	background: transparent 50% 0 no-repeat fixed;
-	background-size: 100% auto;
+	background: #fff 50% 0 no-repeat fixed;
+	/*background-size: 100% auto;*/
 	height: 1000px;
+	width: 1000px;
 	overflow: hidden;
 	box-sizing: border-box;
 	padding: 0;
+	margin: 0 auto;
 }
 .content {
 	font-size: 48px;
@@ -186,7 +192,8 @@ nav.floating .logo a {
 	padding: 40px 0 0 0;
 	display: inline-block;
 	position: relative;
-	left: 50%;
+	/*left: 50%;*/
+	margin-left: 142px;
 	width: 650px;
 }
 
