--- a/css/lp.css
+++ b/css/lp.css
@@ -560,6 +560,7 @@ nav.floating .logo a {
 	top: 0px;
 	left: 30px;
     height: 1000px;
+    overflow: hidden;
 }
 #intro .rainbow-layer .rainbow3 {
 	top: 110px;
@@ -600,6 +601,8 @@ nav.floating .logo a {
 }
 
 .vert .beam {
+	position: relative;
+	top: -1px;
     height: 1px;
     width: 5px;
     float: left;
