--- a/css/lp.css
+++ b/css/lp.css
@@ -1,30 +1,30 @@
 @font-face {
 font-family: 'GothamBook';
-src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.eot');
-src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.eot?iefix') format('eot'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.woff') format('woff'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.ttf') format('truetype'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-book-webfont.svg#gotham-book-webfont') format('svg');
+src: url('../font/gotham-book-webfont.eot');
+src: url('../font/gotham-book-webfont.eot?iefix') format('eot'),
+     url('../font/gotham-book-webfont.woff') format('woff'),
+     url('../font/gotham-book-webfont.ttf') format('truetype'),
+     url('../font/gotham-book-webfont.svg#gotham-book-webfont') format('svg');
 font-weight: normal;
 font-style: normal;
 }
 @font-face {
 font-family: 'GothamMedium';
-src: url('gotham-bold-webfont.eot');
-src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.eot?iefix') format('eot'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.woff') format('woff'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.ttf') format('truetype'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-medium-webfont.svg#gotham-medium-webfont') format('svg');
+src: url('../font/gotham-medium-webfont.eot');
+src: url('../font/gotham-medium-webfont.eot?iefix') format('eot'),
+     url('../font/gotham-medium-webfont.woff') format('woff'),
+     url('../font/gotham-medium-webfont.ttf') format('truetype'),
+     url('../font/gotham-medium-webfont.svg#gotham-medium-webfont') format('svg');
 font-weight: normal;
 font-style: normal;
 }
 @font-face {
 font-family: 'GothamBold';
-src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.eot');
-src: url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.eot?iefix') format('eot'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.woff') format('woff'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.ttf') format('truetype'),
-     url('http://c3364805.r5.cf0.rackcdn.com/gotham-bold-webfont.svg#gotham-bold-webfont') format('svg');
+src: url('../font/gotham-bold-webfont.eot');
+src: url('../font/gotham-bold-webfont.eot?iefix') format('eot'),
+     url('../font/gotham-bold-webfont.woff') format('woff'),
+     url('../font/gotham-bold-webfont.ttf') format('truetype'),
+     url('../font/gotham-bold-webfont.svg#gotham-bold-webfont') format('svg');
 font-weight: normal;
 font-style: normal;
 }
@@ -435,7 +435,6 @@ nav.floating .logo a {
 .no-multiplebgs .carousel.apps .app_links a.tnt div.logo		{ background-position: -540px 0px; }
 .no-multiplebgs .carousel.apps .app_links a.toon div.logo		{ background-position: -600px 0px; }
 .no-multiplebgs .carousel.apps .app_links a.trutv div.logo		{ background-position: -660px 0px; }
-
 
 .carousel.apps .app_links a.btn2go 			{ background-position: 0px 0px, -120px 0px, -60px 0px; }
 .carousel.apps .app_links a.cnn 			{ background-position: 0px 0px, -180px 0px, -60px 0px; }
