Final client comments

--- a/css/lp.css
+++ b/css/lp.css
@@ -525,7 +525,8 @@ nav.floating .logo a {
 	width: 245px;
 }
 #fourth .copy .small {
-	margin-left: 325px;
+	margin-left: 307px;
+	text-align: center;
 }
 
 /* fifth */
