Addressing proofreading comments

--- a/css/lp.css
+++ b/css/lp.css
@@ -318,7 +318,7 @@ nav.floating .logo a {
 	background: transparent url(../img/sprite.png) no-repeat 0px -250px;
 	width: 18px;
 	height: 18px;
-	margin: 0 auto;
+	margin: 3px auto;
 }
 
 /* first */
