Changing heavy transparent PNGs to JPGs, pruning other unnecessary images

--- a/css/lp.css
+++ b/css/lp.css
@@ -586,25 +586,25 @@ nav.floating .logo a {
 	
 }
 #first {
-	background-image: url(../img/first-bg-trans.png);
+	background-image: url(../img/background-first.jpg);
 }
 #first .bg {
 	
 }
 #second {
-	background-image: url(../img/second-bg-trans.png);
+	background-image: url(../img/background-second.jpg);
 }
 #second .bg {
 	
 }
 #third {
-	background-image: url(../img/third-bg-trans.png);
+	background-image: url(../img/background-third.jpg);
 }
 #third .bg {
 	
 }
 #fourth {
-	background-image: url(../img/fourth-bg-trans.png);
+	background-image: url(../img/background-fourth.jpg);
 }
 #fourth .bg {
 	
